--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import Layout from '../layouts/Layout.astro';
             
             <p class="mt-3 text-base text-white sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0 font-medium">
                
-              Editing a PDF can be hard... but with us you can transform your PDFs with the gentle art of digital editing.
+              Making new PDFs all over again is just painfull... why don't we just transform  PDFs with the gentle art of digital editing?
             </p>
             
             <!-- Inspirational Quote -->
