--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ import Layout from '../layouts/Layout.astro';
       <div class="h-56 w-full sm:h-72 md:h-96 lg:w-full lg:h-full relative">
         <div class="absolute inset-4 bg-white rounded-3xl shadow-2xl overflow-hidden transform rotate-2 hover:rotate-0 transition-transform duration-500">
           <img class="h-full w-full object-cover" 
-               src="https://stackblitz.com/storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBCTlBlUndFPSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--1a9ff61849a60aaf290aaa72165ba4a24dcc7e54/A_painter_editing_a_pdf_like_it_was_a_cavas.png" 
+               src="./A_painter_editing_a_pdf_like_it_was_a_cavas.png" 
                alt="Colorful PDF editing painter">
           <div class="absolute inset-0 bg-gradient-to-t from-purple-500 to-transparent opacity-30"></div>
         </div>
