--- a/src/components/PDFEditorComponent.astro
+++ b/src/components/PDFEditorComponent.astro
@@ -5,6 +5,8 @@ interface Props {
 }
 
 const { pdfId, pdfName } = Astro.props;
+
+import
 ---
 
 <div id="pdf-editor" class="h-screen flex flex-col bg-gray-100">
